@@ -1,64 +1,0 @@
-.\"  Licensed to the Apache Software Foundation (ASF) under one .\"
-.\"  or more contributor license agreements.  See the NOTICE file .\"
-.\"  distributed with this work for additional information .\"
-.\"  regarding copyright ownership.  The ASF licenses this file .\"
-.\"  to you under the Apache License, Version 2.0 (the .\"
-.\"  "License"); you may not use this file except in compliance .\"
-.\"  with the License.  You may obtain a copy of the License at .\"
-.\" .\"
-.\"      http://www.apache.org/licenses/LICENSE-2.0 .\"
-.\" .\"
-.\"  Unless required by applicable law or agreed to in writing, software .\"
-.\"  distributed under the License is distributed on an "AS IS" BASIS, .\"
-.\"  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. .\"
-.\"  See the License for the specific language governing permissions and .\"
-.\"  limitations under the License. .\"
-.TH "config:clock"
-.SH NAME
-config:clock \- Configure system clock settings.
-.SH SYNOPSIS
-config:clock [options]
-.SH DESCRIPTION
-You use the config:clock command specify system date, time, and timezone settings.
-A full restart of proxy software occurs when these changes take place.  This command
-requires root privileges, see config:root command.
-.SH OPTIONS
-The following options are supported for the config:clock command:
-.SS "date <mm/dd/yyyy>"
-Specifies the month, day, and year.
-.SS "time <hh:mm:ss>"
-Specifies the hour, minute, and seconds values in the local time zone.  The hour value
-is in 24-hour format.
-.SS "timezone <number from list | list>"
-List the available timezones, or specify the timezone from the numbered list.
-.SH EXAMPLES
-.SS "Example 1. Specifying system date"
-.PP
-.nf
-traffic_shell> config:clock date 
-DATE: 10/14/2001
-traffic_shell> config:clock date 10/15/2001
-(Stopping Proxy Software)
-Changing Date
-(Starting Proxy Software)
-DATE: 10/15/2001
-traffic_shell>
-.SS "Example 2. Listing available timezones"
-.PP
-.nf
-traffic_shell> config:clock timezone list
-0   Africa/Abidjan
-1   Africa/Accra
-2   Africa/Addis_Ababa
-...
-362   Pacific/Wake
-363   Pacific/Wallis
-364   Pacific/Yap
-traffic_shell>
-.SS "Example 3. Specifying the local timezone"
-.PP
-.nf
-traffic_shell> config:clock timezone 109
-traffic_shell>
-.SH "SEE ALSO"
-config:root
